[package]
name = "polymede"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Terminal I/O
rustyline = "15"

# gRPC (Khronos compatibility)
tonic = "0.12"
prost = "0.13"

# LLM clients (custom, provider-agnostic)
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# CLI
clap = { version = "4", features = ["derive"] }

# Config
toml = "0.8"
dirs = "6"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
glob = "0.3"
async-trait = "0.1"
base64 = "0.22"
tiktoken-rs = "0.6"

[build-dependencies]
prost-build = "0.13"
